# Terraform-Mensageria

./: .gitignore  docker-compose.yml  readme.MD
api/: Dockerfile
api/painel/: app.py
api/painel/static/: script.js  style.css
api/painel/templates/: index.html
proto/: messaging.proto
proto/terraform/: main.tf  vars.tf
server/: Dockerfile  client.py  consumer.py  messaging_pb2.py  messaging_pb2_grpc.py  pyproject.toml  server.py
